fix http toolset

--- a/packages/web/i18n/en/app.json
+++ b/packages/web/i18n/en/app.json
@@ -2,7 +2,7 @@
   "Add_tool": "Add tool",
   "AutoOptimize": "Automatic optimization",
   "Click_to_delete_this_field": "Click to delete this field",
-  "Custom_params": "Custom parameters",
+  "Custom_params": "input parameters",
   "Edit_tool": "Edit tool",
   "Filed_is_deprecated": "This field is deprecated",
   "HTTPTools_Create_Type": "Create Type",
@@ -111,6 +111,7 @@
   "import_configs_failed": "Import configuration failed, please ensure the configuration is correct!",
   "import_configs_success": "Import Successful",
   "initial_form": "initial state",
+  "input_params_tips": "Tool input parameters will not be passed directly to the request URL; they can be referenced on the right side using \"/\".",
   "interval.12_hours": "Every 12 Hours",
   "interval.2_hours": "Every 2 Hours",
   "interval.3_hours": "Every 3 Hours",
