--- a/packages/web/i18n/zh-CN/app.json
+++ b/packages/web/i18n/zh-CN/app.json
@@ -2,7 +2,7 @@
   "Add_tool": "添加工具",
   "AutoOptimize": "自动优化",
   "Click_to_delete_this_field": "点击删除该字段",
-  "Custom_params": "自定义参数",
+  "Custom_params": "输入参数",
   "Edit_tool": "编辑工具",
   "Filed_is_deprecated": "该字段已弃用",
   "HTTPTools_Create_Type": "创建方式",
@@ -114,6 +114,7 @@
   "import_configs_failed": "导入配置失败，请确保配置正常！",
   "import_configs_success": "导入成功",
   "initial_form": "初始状态",
+  "input_params_tips": "工具的输入参数，不会直接传递到请求地址，可在右侧通过 \"/\" 来引用变量",
   "interval.12_hours": "每12小时",
   "interval.2_hours": "每2小时",
   "interval.3_hours": "每3小时",
