--- a/packages/web/i18n/zh-Hant/app.json
+++ b/packages/web/i18n/zh-Hant/app.json
@@ -2,7 +2,7 @@
   "Add_tool": "添加工具",
   "AutoOptimize": "自動優化",
   "Click_to_delete_this_field": "點擊刪除該字段",
-  "Custom_params": "自定義參數",
+  "Custom_params": "輸入參數",
   "Filed_is_deprecated": "該字段已棄用",
   "HTTPTools_Create_Type": "創建方式",
   "HTTPTools_Create_Type_Tip": "選擇後不支持修改",
@@ -111,6 +111,7 @@
   "import_configs_failed": "匯入設定失敗，請確認設定是否正常！",
   "import_configs_success": "匯入成功",
   "initial_form": "初始狀態",
+  "input_params_tips": "工具的輸入參數，不會直接傳遞到請求地址，可在右側通過 \"/\" 來引用變數",
   "interval.12_hours": "每 12 小時",
   "interval.2_hours": "每 2 小時",
   "interval.3_hours": "每 3 小時",
