--- a/packages/web/i18n/en/app.json
+++ b/packages/web/i18n/en/app.json
@@ -95,6 +95,7 @@
   "document_upload": "Document Upload",
   "edit_app": "Application details",
   "edit_info": "Edit",
+  "empty_tool_tips": "Please add tools on the left side",
   "execute_time": "Execution Time",
   "export_config_successful": "Configuration copied, some sensitive information automatically filtered. Please check for any remaining sensitive data.",
   "export_configs": "Export",
@@ -105,6 +106,8 @@
   "file_upload_tip": "Once enabled, documents/images can be uploaded. Documents are retained for 7 days, images for 15 days. Using this feature may incur additional costs. To ensure a good experience, please choose an AI model with a larger context length when using this feature.",
   "go_to_chat": "Go to Conversation",
   "go_to_run": "Go to Execution",
+  "http_toolset_add_tips": "Click the \"Add\" button to add tools",
+  "http_toolset_config_tips": "Click \"Start Configuration\" to add tools",
   "image_upload": "Image Upload",
   "image_upload_tip": "How to activate model image recognition capabilities",
   "import_configs": "Import",
