--- a/packages/web/i18n/zh-Hant/app.json
+++ b/packages/web/i18n/zh-Hant/app.json
@@ -95,6 +95,7 @@
   "document_upload": "文件上傳",
   "edit_app": "應用詳情",
   "edit_info": "編輯資訊",
+  "empty_tool_tips": "請在左側添加工具",
   "execute_time": "執行時間",
   "export_config_successful": "已複製設定，自動過濾部分敏感資訊，請注意檢查是否仍有敏感資料",
   "export_configs": "匯出設定",
@@ -105,6 +106,8 @@
   "file_upload_tip": "開啟後，可以上傳文件／圖片。文件保留 7 天，圖片保留 15 天。使用這個功能可能產生較多額外費用。為了確保使用體驗，使用這個功能時，請選擇上下文長度較大的 AI 模型。",
   "go_to_chat": "前往對話",
   "go_to_run": "前往執行",
+  "http_toolset_add_tips": "點擊添加按鈕來添加工具",
+  "http_toolset_config_tips": "點擊開始配置來添加工具",
   "image_upload": "圖片上傳",
   "image_upload_tip": "如何啟用模型圖片辨識功能",
   "import_configs": "匯入設定",
