--- a/packages/web/i18n/zh-CN/app.json
+++ b/packages/web/i18n/zh-CN/app.json
@@ -98,6 +98,7 @@
   "edit_app": "应用详情",
   "edit_info": "编辑信息",
   "edit_param": "编辑参数",
+  "empty_tool_tips": "请在左侧添加工具",
   "execute_time": "执行时间",
   "export_config_successful": "已复制配置，自动过滤部分敏感信息，请注意检查是否仍有敏感数据",
   "export_configs": "导出配置",
@@ -108,6 +109,8 @@
   "file_upload_tip": "开启后，可以上传文档/图片。文档保留7天，图片保留15天。使用该功能可能产生较多额外费用。为保证使用体验，使用该功能时，请选择上下文长度较大的AI模型。",
   "go_to_chat": "去对话",
   "go_to_run": "去运行",
+  "http_toolset_add_tips": "点击添加按钮来添加工具",
+  "http_toolset_config_tips": "点击开始配置来添加工具",
   "image_upload": "图片上传",
   "image_upload_tip": "如何启动模型图片识别能力",
   "import_configs": "导入配置",
